<RelativeLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/backcolor"
    android:padding="8dp">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chap2"
                android:text="@string/chapter2_programming_a_game"
                android:fontFamily="serif"
                android:textSize="28sp"
                android:textColor="@color/teal_700"
                android:gravity="center"/>

            <!--mcq-->

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q1"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:fontFamily="serif"
                android:textColor="@color/white"
                android:text="@string/_1_to_set_up_a_new_project_which_command_is_used"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q1o1"
                android:buttonTint="@color/white"
                android:text="@string/cd_new_file_name"
                android:textColor="@color/white"
                android:textSize="20sp"/>


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q1o2"
                android:buttonTint="@color/white"
                android:text="@string/cargo_new_file_name"
                android:textColor="@color/white"
                android:textSize="20sp"/>



            <com.google.android.material.textview.MaterialTextView
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q2"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/_2_which_file_contain_dependencies"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q2o1"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:text="@string/cargo_toml_file"
                android:textSize="20sp"/>


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q2o2"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:text="@string/cargo_build_file"
                android:textSize="20sp"/>
            <!-- Q3-->

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:id="@+id/C2Q3"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/_3_this_command_is_used_to_run_the_code"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:buttonTint="@color/white"
                android:id="@+id/C2Q3o1"
                android:text="@string/Cargo_Run"
                android:textColor="@color/white"
                android:textSize="20sp"/>


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/C2Q3o2"
                android:buttonTint="@color/white"
                android:fontFamily="serif"
                android:text="@string/cargo_run"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <!--btn-->
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/C2Fbtn"
                    android:layout_marginStart="23dp"
                    android:text="Finish"
                    />


                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:id="@+id/C2btn"
                    android:text="Next"
                    android:layout_marginStart="162dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
