

<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/signup"
        android:paddingTop="30dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"
        android:textSize="55sp"
        android:fontFamily="cursive"
        android:text="Forgot Password"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_below="@id/signup"
        android:id="@+id/loginbox"
        android:layout_width="250dp"
        android:layout_height="440dp"
        android:background="@drawable/gradient1"
        tools:ignore="MissingConstraints"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/signup">


        <ImageView
            android:layout_width="327dp"
            android:layout_height="360dp"
            android:elevation="20dp"
            android:id="@+id/wshadowbox"
            android:layout_marginStart="50dp"
            android:background="@drawable/white1"
            tools:ignore="MissingConstraints"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginStart="53dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/PhoneNo"
            app:boxCornerRadiusBottomEnd="23dp"
            app:boxCornerRadiusTopStart="23dp"
            app:helperText="Please Enter Phone Number"
            app:startIconDrawable="@drawable/ic_baseline_phone"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldpas"
            android:layout_below="@id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="23dp"
            app:boxCornerRadiusTopStart="23dp"
            android:hint="@string/OldPass"
            app:helperText="Please Enter Old Password"
            app:startIconDrawable="@drawable/ic_baseline_error_outline"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Newpas"
            android:layout_below="@id/oldpas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="23dp"
            app:boxCornerRadiusTopStart="23dp"
            android:hint="@string/NewPass"
            app:helperText="Please Enter New Password"
            app:startIconDrawable="@drawable/ic_baseline_done"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!--btn-->
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Newpas"
            android:text="resetbtn"
            android:id="@+id/resetbtn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white">


        </com.google.android.material.button.MaterialButton>


    </RelativeLayout>
</RelativeLayout>